cluster/web/fourget/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: fourget
    app.kubernetes.io/version: 1.0.59
  name: fourget
spec:
  selector:
    app.kubernetes.io/name: fourget
  ports:
  - name: http-fourget
    port: 8080
    targetPort: 8080
