cluster/web/fourget/egress-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fourget-vpn-only-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: fourget
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gluetun-proxy
      podSelector:
        matchLabels:
          app.kubernetes.io/name: gluetun-proxy
    ports:
    - port: 8888
      protocol: TCP
